syntax = "proto3";
package mmn;

option go_package = "mmn/proto;proto";

// Transaction status enum
enum TransactionStatus {
  UNKNOWN = 0;
  PENDING = 1;      // Transaction is in mempool
  CONFIRMED = 2;    // Transaction is included in a block
  FINALIZED = 3;    // Transaction is finalized (block has enough votes)
  FAILED = 4;       // Transaction failed validation
  EXPIRED = 5;      // Transaction expired (timeout)
}

message TxMsg { 
  int32 type = 1;
  string sender = 2;
  string recipient = 3;
  uint64 amount = 4;
  uint64 timestamp = 5;
  string text_data = 6;
  uint64 nonce = 7;
}

message SignedTxMsg {
  TxMsg tx_msg = 1;
  string signature = 2;
}

message TxResponse { 
  bool   ok    = 1; 
  string error = 2; 
}

message AddTxResponse {
  bool   ok      = 1;
  string tx_hash = 2;
  string error   = 3;
}

// Request to get transaction status
message GetTransactionStatusRequest {
  string tx_hash = 1;
}

// Response with transaction status
message GetTransactionStatusResponse {
  string tx_hash = 1;
  TransactionStatus status = 2;
  uint64 block_slot = 3;        // Slot where transaction was included (if confirmed/finalized)
  string block_hash = 4;        // Hash of the block (if confirmed/finalized)
  uint64 confirmations = 5;     // Number of confirmations
  string error_message = 6;     // Error message if failed
  uint64 timestamp = 7;         // Timestamp when status was last updated
}

// Request to subscribe to transaction status updates
message SubscribeTransactionStatusRequest {
  // tx_hash is now optional - if not provided, subscribes to all transaction events
  optional string tx_hash = 1;
}

// Stream of transaction status updates
message TransactionStatusUpdate {
  string tx_hash = 1;
  TransactionStatus status = 2;
  uint64 block_slot = 3;
  string block_hash = 4;
  uint64 confirmations = 5;
  string error_message = 6;
  uint64 timestamp = 7;
}

service TxService {
  rpc TxBroadcast (SignedTxMsg) returns (TxResponse);
  rpc AddTx (SignedTxMsg) returns (AddTxResponse);
  
  // Get current status of a transaction
  rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
  
  // Subscribe to status updates for all transactions (or specific transaction if tx_hash provided)
  rpc SubscribeTransactionStatus(SubscribeTransactionStatusRequest) returns (stream TransactionStatusUpdate);
}
